# ANARCI

./: .gitignore  CHANGELOG.md  pyproject.toml  setup.py
build_pipeline/: FormatAlignments.py  RUN_pipeline.sh
build_pipeline/HMMs/: ALL.hmm  ALL.hmm.h3m  ALL.hmm.h3p
lib/python/anarci/: __init__.py  anarci.py
